# eit-analyzer

./: CMakeLists.txt  Dockerfile  README.md  domain.hpp  electrode.hpp  element.hpp  fem.hpp  gauss.hpp  inverse.hpp  largemat.hpp  main.cpp
